2011-10-04  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* R/getBmaSamples.R: Include zeroes for models where the covariate
	is not included. Note that this is necessary for correct
	computation of fit samples based on a model average. However, this
	changes the interpretation of the samples, and therefore curve
	estimates based on these samples: it is no longer conditional on
	inclusion of the covariate, but marginally over all models, also
	those not including the covariate.

2011-08-19  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Add vignette and citation information.

2011-08-04  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Add fast implementation of utility function
	"aggregateModelsTable", which is useful for aggregating models
	which only are different with respect to their (smooth) degrees of
	freedom for included covariates.

2011-07-27  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Start finalising the "postOptimize" functionality, now also for
	GAMs.

2011-07-22  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* R/glmModelData.R: use more robust computation for null model log
	marginal likelihood, and really use the offsets for constructing
	the fixed GLM weight matrix.

	* R/getRhos.R: more stable computation of eigenvalues,
	and wider range for possible rhos.

	* src/glmGetSamples.cpp: catch errors in MCMC and produce R error
	message instead of crashing R

2011-06-29  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Revision of model prior probabilities: now linear inclusion is
	not treated very differently from smooth inclusion.
	* R/exhaustive.R: Catch errors in the construction of model
	configuration matrix, which stems from too large model spaces.

2011-06-22  Daniel Sabanés Bové  <daniel.sabanesbove@ifspm.uzh.ch>

	* Add post-processing of a single model to optimise the log
	marginal likelihood with respect to the degrees of freedoms of the
	continuous covariates.
