@@ -16,8 +16,8 @@ Description: This R-package implements Bayesian model
     for the parameters in the normal additive and the
     generalised additive model.
 SystemRequirements: GNU make
-Version: 0.0-20
-Date: 2011-10-04
+Version: 0.0-21
+Date: 2011-10-13
 Depends:
     R (>= 2.12.0),
     Rcpp (>= 0.8.8),
